== 0.2.2

* bug fix
  * allow show_for to work with AR association proxies

* enhancements
  * improvements on html safe and output buffers

== 0.2.1

* enhancements
  * added label_proc
  * compatibility with latest Rails

== 0.2.0

* enhancements
  * Rails 3 compatibility

== 0.1.4

* bug fix
  * allow show_for to work with AR association proxies

== 0.1.3

* enhancements
  * allow builder to be given to show_for

* bugfix
  * Fix typo in yaml

== 0.1.2

* enhancements
  * allow f.attribute :nickname, :in => :profile as association shortcut

* deprecations
  * :method now becomes :using

== 0.1.1

* enhancements
  * HAML compatibility (by github.com/grimen)
  * blank_content support (by github.com/grimen)

== 0.1

* First release