@@ -1,3 +1,10 @@
+* enhancements
+  * added :attributes method to generate all attributes given
+  * udpate generator to use the new syntax show_for:install
+
+* bug fix
+  * fix numeric types
+
 == 0.2.2
 
 * bug fix
